# i18n-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md
src/codechu_i18n/: __init__.py  _lazy.py  _locale.py  _plural.py  _translator.py
tests/: _mofile.py  conftest.py  test_lazy.py  test_locale.py  test_plural.py  test_translator.py
