[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codechu-i18n"
version = "0.1.0"
description = "Internationalization helpers on top of stdlib gettext: locale negotiation, plural rules, RTL, lazy strings."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Codechu" }]
keywords = ["i18n", "l10n", "gettext", "locale", "translation", "cldr", "plural", "rtl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.1", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/codechu/codechu-i18n-py"
Source = "https://github.com/codechu/codechu-i18n-py"
Issues = "https://github.com/codechu/codechu-i18n-py/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
